force-app/main/default/objects/NI_Vendor_Agreement__c/NI_Vendor_Agreement__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-015836

Used by Finance as part of CAPS Royalty and Amortization management</description>
    <label>Vendor Agreement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Agreement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>