force-app/main/default/objects/NI_Vendor_Agreement__c/fields/Billable_Transaction_Percent__c.field-meta.xml
<CustomField>
    <fullName>Billable_Transaction_Percent__c</fullName>
    <label>Billable Transaction Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>