force-app/main/default/objects/NI_Vendor_Agreement__c/fields/Franchisor__c.field-meta.xml
<CustomField>
    <fullName>Franchisor__c</fullName>
    <description>Must match Account Franchisor value.
Before creating a CAGR, check to see if there is an applicable Custom VAGR.  If not, then use the standard rule associated with the Product.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Must match Account Franchisor value.
Before creating a CAGR, check to see if there is an applicable Custom VAGR.  If not, then use the standard rule associated with the Product.</inlineHelpText>
    <label>Franchisor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>