force-app/main/default/objects/NI_Vendor_Agreement__c/fields/General_Ledger_Debit_Account__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Debit_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>General Ledger Debit Account</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>