force-app/main/default/objects/NI_Vendor_Agreement__c/fields/Royalty_Distribution_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Distribution_Trigger__c</fullName>
    <label>Royalty Distribution Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Receipt of Payment</fullName>
            </value>
            <value>
                <fullName>Installed OR Receipt of Payment</fullName>
            </value>
            <value>
                <fullName>Installed AND Receipt of Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>