force-app/main/default/objects/NI_Vendor_Agreement__c/fields/Royalty_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Percentage__c</fullName>
    <label>Royalty Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>