force-app/main/default/objects/NI_Vendor_Agreement__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Agreement</relationshipLabel>
    <relationshipName>Vendor_Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>