force-app/main/default/objects/NI_Vendor_Agreement__c/fields/Vendor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used on Custom Vendor Agreements to link back to the Vendor Agreement being customized.</description>
    <inlineHelpText>Used on Custom Vendor Agreements to link back to the Vendor Agreement being customized.</inlineHelpText>
    <label>Vendor Agreement</label>
    <referenceTo>NI_Vendor_Agreement__c</referenceTo>
    <relationshipLabel>Custom Vendor Agreements</relationshipLabel>
    <relationshipName>Vendor_Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>