force-app/main/default/objects/NI_Vendor_Agreement__c/recordTypes/Custom_Vendor_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Custom_Vendor_Agreement</fullName>
    <active>true</active>
    <label>Custom Vendor Agreement</label>
</RecordType>