force-app/main/default/objects/NI_Vendor_Agreement__c/recordTypes/Vendor_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Agreement</fullName>
    <active>true</active>
    <label>Vendor Agreement</label>
</RecordType>