force-app/main/default/objects/NI_Vendor_Agreement__c/validationRules/Vendor_Agreement_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Agreement_Required</fullName>
    <active>true</active>
    <description>The Vendor Agreement field is required for Custom Vendor Agreement records</description>
    <errorConditionFormula>AND(RecordType.Name = &quot;Custom Vendor Agreement&quot;,ISBLANK( Vendor_Agreement__c))</errorConditionFormula>
    <errorDisplayField>Vendor_Agreement__c</errorDisplayField>
    <errorMessage>The Vendor Agreement field is required on Customer Agreement records</errorMessage>
</ValidationRule>