force-app/main/default/objects/NI_Vendor_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Vendor__c</columns>
    <columns>Royalty_Base_Amount__c</columns>
    <columns>Royalty_Percentage__c</columns>
    <columns>Royalty_Transaction_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>